[package]
name = "hax-macros"
version = "0.0.0"
edition = "2021"
description = "🧪 The versatile and intuitive memory hacking library."
documentation = "https://docs.rs/hax-macros"
readme = "../README.md"
repository = "https://github.com/hax-rs/hax"
license = "MIT"

[lib]
proc-macro = true

[dev-dependencies.hax]
path = "../hax"
version = "0.0.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
