[package]
name = "hax-macros"
version = "0.0.0"
edition = "2021"
description = "🧪 The versatile and intuitive memory hacking library."
documentation = "https://docs.rs/hax-macros"
readme = "../README.md"
repository = "https://github.com/hax-rs/hax"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
hax = { path = "../hax" }
linkme = "0.3.7"