[package]
name = "hax"
version = "0.0.0"
edition = "2021"
description = "🧪 The versatile and intuitive memory hacking library."
documentation = "https://docs.rs/hax"
readme = "../README.md"
repository = "https://github.com/hax-rs/hax"
license = "MIT"

[features]
external = []
internal = []

[dependencies.hax-macros]
path = "../hax-macros"
version = "0.0.0"

[dependencies]
memlib = "0.1.1"

[[example]]
name = "external"
path = "examples/external.rs"
required-features = ["external"]


[[example]]
name = "internal"
path = "examples/internal.rs"
required-features = ["internal"]
crate-type = ["cdylib"]
